--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-router/node": "^7.1.0",
     "@react-router/serve": "^7.1.0",
+    "@supabase/supabase-js": "^2.47.10",
     "inferencejs": "^1.0.16",
     "isbot": "^5.1.17",
     "react": "^19.0.0",
