--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@react-router/node": "^7.1.0",
     "@react-router/serve": "^7.1.0",
     "@supabase/supabase-js": "^2.47.10",
+    "@types/js-cookie": "^3.0.6",
     "inferencejs": "^1.0.16",
     "isbot": "^5.1.17",
+    "js-cookie": "^3.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.0",
