--- a/fly.toml
+++ b/fly.toml
@@ -1,15 +1,15 @@
-# fly.toml app configuration file generated for split-the-g on 2024-12-21T21:49:25Z
+# fly.toml app configuration file generated for split-the-g on 2025-03-04T14:56:20Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
 app = 'split-the-g'
-primary_region = 'iad'
+primary_region = 'ewr'
 
 [build]
 
 [http_service]
-  internal_port = 3000
+  internal_port = 8080
   force_https = true
   auto_stop_machines = 'stop'
   auto_start_machines = true
